traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:32: error: ';' expected but 'else' found.
    else 
    ^